--- a/src/main/resources/view/Extensions.css
+++ b/src/main/resources/view/Extensions.css
@@ -18,3 +18,12 @@
 .tooltip-text {
     -fx-text-fill: white;
 }
+
+#contact, #event {
+    -fx-font-size: 30px;
+    -fx-text-fill: orange;
+    -fx-background-color: white;
+    -fx-background-radius: 3;
+    -fx-padding: 10 20 10 20;
+    -fx-background-insets: 10;
+}
