--- a/src/main/resources/view/Extensions.css
+++ b/src/main/resources/view/Extensions.css
@@ -20,10 +20,11 @@
 }
 
 #contact, #event {
-    -fx-font-size: 30px;
-    -fx-text-fill: orange;
-    -fx-background-color: white;
-    -fx-background-radius: 3;
-    -fx-padding: 10 20 10 20;
+    -fx-text-fill: white;
+    -fx-padding: 10 5 10 5;
     -fx-background-insets: 10;
+}
+
+#emailIcon {
+    -fx-text-fill: white;
 }
