--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -30,10 +30,11 @@
       </HBox>
       <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
       <!-- Optional fields-->
-      <Label fx:id="phone" managed="false" styleClass="cell_small_label" text="\$phone" />
-      <Label fx:id="address" managed="false" styleClass="cell_small_label" text="\$address" />
-      <Label fx:id="telegramHandle" managed="false" styleClass="cell_small_label" text="\$telegramHandle" />
-      <Label fx:id="zoom" managed="false" styleClass="cell_small_label" text="\$zoom" />
+      <!-- TODO: after implementing the fields as optional, set managed to false as default. See PersonCard.java -->
+      <Label fx:id="phone" managed="true" styleClass="cell_small_label" text="\$phone" />
+      <Label fx:id="address" managed="true" styleClass="cell_small_label" text="\$address" />
+      <Label fx:id="telegramHandle" managed="true" styleClass="cell_small_label" text="\$telegramHandle" />
+      <Label fx:id="zoom" managed="true" styleClass="cell_small_label" text="\$zoom" />
       <FlowPane fx:id="tags" />
     </VBox>
   </GridPane>
