--- a/src/main/resources/view/EventListCard.fxml
+++ b/src/main/resources/view/EventListCard.fxml
@@ -22,12 +22,13 @@
                 </Label>
                 <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
             </HBox>
-            <Label fx:id="from" styleClass="cell_small_label" text="\$from" />
+            <Label fx:id="from" managed="false" styleClass="cell_small_label" text="\$from" />
+            <!-- Optional fields-->
             <Label fx:id="to" managed="false" styleClass="cell_small_label" text="\$to" />
             <Label fx:id="address" managed="false" styleClass="cell_small_label" text="\$address" />
             <Label fx:id="zoomLink" managed="false" styleClass="cell_small_label" text="\$meeting-link" />
             <Label fx:id="description" managed="false" styleClass="cell_small_label" text="\$description" />
-            <FlowPane fx:id="tags" />
+            <FlowPane fx:id="tags" managed="false" />
         </VBox>
     </GridPane>
 </HBox>
