Integrate link command with storage, model and ui

--- a/src/main/resources/view/EventListCard.fxml
+++ b/src/main/resources/view/EventListCard.fxml
@@ -29,6 +29,7 @@
             <Label fx:id="zoomLink" managed="false" styleClass="cell_small_label" text="\$meeting-link" />
             <Label fx:id="description" managed="false" styleClass="cell_small_label" text="\$description" />
             <FlowPane fx:id="tags" managed="false" />
+            <FlowPane fx:id="links" />
         </VBox>
     </GridPane>
 </HBox>
