--- a/src/main/resources/view/ContactListCard.fxml
+++ b/src/main/resources/view/ContactListCard.fxml
@@ -34,6 +34,7 @@
       <Label fx:id="telegramHandle" managed="false" styleClass="cell_small_label" text="\$telegramHandle" />
       <Label fx:id="zoom" managed="false" styleClass="cell_small_label" text="\$zoom" />
       <FlowPane fx:id="tags" managed="false" />
+      <FlowPane fx:id="links" />
     </VBox>
   </GridPane>
 </HBox>
