--- a/src/main/resources/view/EventListCard.fxml
+++ b/src/main/resources/view/EventListCard.fxml
@@ -29,7 +29,13 @@
             <Label fx:id="zoomLink" managed="false" styleClass="cell_small_label" text="\$meeting-link" />
             <Label fx:id="description" managed="false" styleClass="cell_small_label" text="\$description" />
             <FlowPane fx:id="tags" managed="false" />
-            <FlowPane fx:id="links" />
+            <HBox>
+                <padding>
+                    <Insets top="5" />
+                </padding>
+                <Label styleClass="cell_small_label" text="Linked contacts: " />
+                <FlowPane fx:id="links" />
+            </HBox>
         </VBox>
     </GridPane>
 </HBox>
