Fix truncate issue in links label

--- a/src/main/resources/view/EventListCard.fxml
+++ b/src/main/resources/view/EventListCard.fxml
@@ -33,7 +33,12 @@
                 <padding>
                     <Insets top="5" />
                 </padding>
-                <Label styleClass="cell_small_label" text="Linked contacts: " />
+                <Label styleClass="cell_small_label" text="Linked contacts: " >
+                    <minWidth>
+                        <!-- Ensures that the label text is never truncated -->
+                        <Region fx:constant="USE_PREF_SIZE" />
+                    </minWidth>
+                </Label>
                 <FlowPane fx:id="links" />
             </HBox>
         </VBox>
