--- a/src/main/resources/view/ContactListCard.fxml
+++ b/src/main/resources/view/ContactListCard.fxml
@@ -38,7 +38,12 @@
         <padding>
           <Insets top="5" />
         </padding>
-        <Label styleClass="cell_small_label" text="Linked events: " />
+        <Label styleClass="cell_small_label" text="Linked events: " >
+          <minWidth>
+            <!-- Ensures that the label text is never truncated -->
+            <Region fx:constant="USE_PREF_SIZE" />
+          </minWidth>
+        </Label>
         <FlowPane fx:id="links" />
       </HBox>
     </VBox>
