Update UI to not show linked label if there is no link

--- a/src/main/resources/view/ContactListCard.fxml
+++ b/src/main/resources/view/ContactListCard.fxml
@@ -38,13 +38,13 @@
         <padding>
           <Insets top="5" />
         </padding>
-        <Label styleClass="cell_small_label" text="Linked events: " >
+        <Label fx:id="linksLabel" styleClass="cell_small_label" text="Linked events: " managed="false" >
           <minWidth>
             <!-- Ensures that the label text is never truncated -->
             <Region fx:constant="USE_PREF_SIZE" />
           </minWidth>
         </Label>
-        <FlowPane fx:id="links" />
+        <FlowPane fx:id="links" managed="false" />
       </HBox>
     </VBox>
   </GridPane>
