--- a/src/main/resources/view/EventListCard.fxml
+++ b/src/main/resources/view/EventListCard.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.layout.RowConstraints?>
+<?import java.net.URL?>
 <HBox fx:id="cardPane" xmlns="http://javafx.com/javafx/11" xmlns:fx="http://javafx.com/fxml/1">
     <GridPane HBox.hgrow="ALWAYS">
         <columnConstraints>
@@ -19,6 +19,9 @@
             <padding>
                 <Insets bottom="5" left="15" right="5" top="5" />
             </padding>
+            <stylesheets>
+                <URL value = "@Clickable.css"/>
+            </stylesheets>
             <HBox alignment="CENTER_LEFT" spacing="5">
                 <Label fx:id="id" styleClass="cell_big_label">
                     <minWidth>
@@ -34,7 +37,7 @@
             <Label fx:id="address" managed="false" onMouseClicked="#copyAddress" styleClass="cell_small_label" text="\$address" />
             <HBox>
                 <Label fx:id="zoomLinkTitle" managed="false" styleClass="cell_small_label"/>
-                <Label fx:id="zoomLink" managed="false" onMouseClicked="#openZoomLink" style="-fx-text-fill: #1fc2de;" styleClass="cell_small_label" text="\$meeting-link" underline="true" />
+                <Label fx:id="zoomLink" managed="false" onMouseClicked="#openZoomLink" styleClass="cell_small_label" text="\$meeting-link"/>
             </HBox>
             <Label fx:id="description" managed="false" onMouseClicked="#copyDescription" styleClass="cell_small_label" text="\$description" />
             <FlowPane fx:id="tags" managed="false" />
