--- a/src/main/resources/view/HelpWindow.css
+++ b/src/main/resources/view/HelpWindow.css
@@ -1,3 +1,82 @@
-#copyButton, #helpMessage {
-    -fx-font-family: "Open Sans";
+#introduction {
+    -fx-font-family: "Open Sans Extra Bold";
+    -fx-padding: 3 3 3 3;
+}
+
+#contactTitle,
+#eventTitle,
+#generalTitle {
+    -fx-font-family: "Open Sans Extra Bold";
+    -fx-font-size: 13pt;
+    -fx-padding: 5 3 1 3;
+    -fx-underline: "true";
+}
+
+#CAdd,
+#CClear,
+#CDelete,
+#CEdit,
+#CFind,
+#CList,
+#CView,
+#EAdd,
+#EClear,
+#EDelete,
+#EEdit,
+#EFind,
+#ELink,
+#EList,
+#ESort,
+#EView,
+#Calendar,
+#Exit,
+#Help,
+#Redo,
+#Undo,
+#CAddCommand,
+#CClearCommand,
+#CDeleteCommand,
+#CEditCommand,
+#CFindCommand,
+#CListCommand,
+#CViewCommand,
+#EAddCommand,
+#EClearCommand,
+#EDeleteCommand,
+#EEditCommand,
+#EFindCommand,
+#ELinkCommand,
+#EListCommand,
+#ESortCommand,
+#EViewCommand,
+#CalendarCommand,
+#ExitCommand,
+#HelpCommand,
+#RedoCommand,
+#UndoCommand,
+#copyButton,
+#helpMessage {
+    -fx-font-family: "Open Sans Light";
+    -fx-padding: 3 3 3 3;
+}
+
+#actionHeaderContact,
+#formatContact {
+    -fx-font-family: "Open Sans Extra Bold";
+    -fx-padding: 3 3 3 3;
+    -fx-background-color: #1fe0cd;
+}
+
+#actionHeaderEvent,
+#formatEvent {
+    -fx-font-family: "Open Sans Extra Bold";
+    -fx-padding: 3 3 3 3;
+    -fx-background-color: #ffd136;
+}
+
+#actionHeaderGeneral,
+#formatGeneral {
+    -fx-font-family: "Open Sans Extra Bold";
+    -fx-padding: 3 3 3 3;
+    -fx-background-color: #828282;
 }
