Add click and view link feature

--- a/src/main/resources/view/Clickable.css
+++ b/src/main/resources/view/Clickable.css
@@ -1,4 +1,8 @@
-#zoomLink, #telegramHandle {
+.linkable, #telegramHandle, #zoomLink {
     -fx-text-fill: #1fc2de;
     -fx-underline: true;
+}
+
+.clickable:hover {
+    -fx-cursor: hand;
 }
