--- a/src/main/resources/view/ContactListCard.fxml
+++ b/src/main/resources/view/ContactListCard.fxml
@@ -30,11 +30,12 @@
         <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
       </HBox>
       <Label fx:id="email" wrapText="false" managed="false" styleClass="cell_small_label" text="\$email" />
-      <!-- Optional fields-->
+
+      <!-- Optional fields -->
+      <!-- phone -->
       <HBox>
         <ImageView fx:id="phoneIcon" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true"
                 preserveRatio="true" managed="false" visible="false">
-
            <Image url="@../images/phone.png" />
         </ImageView>
         <HBox>
@@ -43,15 +44,56 @@
           </padding>
           <Label fx:id="phone" managed="false" styleClass="cell_small_label" text="\$phone" />
         </HBox>
-
       </HBox>
 
-      <Label fx:id="address" managed="false" styleClass="cell_small_label" text="\$address" />
-      <Label fx:id="telegramHandle" managed="false" styleClass="cell_small_label" text="\$telegramHandle" />
-      <Label fx:id="zoom" managed="false" styleClass="cell_small_label" text="\$zoom" />
+      <!-- address -->
+      <HBox>
+        <ImageView fx:id="addressIcon" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true"
+                   preserveRatio="true" managed="false" visible="false">
+          <Image url="@../images/address.png" />
+        </ImageView>
+        <HBox>
+          <padding>
+            <Insets left="5" />
+          </padding>
+          <Label fx:id="address" managed="false" styleClass="cell_small_label" text="\$address" />
+        </HBox>
+      </HBox>
+
+      <!-- telegram handle -->
+      <HBox>
+        <ImageView fx:id="telegramIcon" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true"
+                   preserveRatio="true" managed="false" visible="false">
+          <Image url="@../images/telegram.png" />
+        </ImageView>
+        <HBox>
+          <padding>
+            <Insets left="5" />
+          </padding>
+          <Label fx:id="telegramHandle" managed="false" styleClass="cell_small_label" text="\$telegramHandle" />
+        </HBox>
+      </HBox>
+
+      <!-- zoom -->
+      <HBox fx:id="zoom" >
+        <padding>
+          <Insets top="2" bottom="2" />
+        </padding>
+        <ImageView fx:id="zoomIcon" fitHeight="20.0" fitWidth="20.0" pickOnBounds="true"
+                   preserveRatio="true" >
+        </ImageView>
+        <HBox>
+          <padding>
+            <Insets left="5" />
+          </padding>
+          <Label fx:id="zoomText" styleClass="cell_small_label" text="\$zoom" />
+        </HBox>
+      </HBox>
+
+      <!-- links -->
       <HBox>
         <padding>
-          <Insets top="5" />
+          <Insets top="2" bottom="2" />
         </padding>
         <Label fx:id="linksLabel" styleClass="cell_small_label" text="Linked events: " managed="false" >
           <minWidth>
@@ -61,7 +103,23 @@
         </Label>
         <FlowPane fx:id="links" managed="false" />
       </HBox>
-      <FlowPane fx:id="tags" managed="false" />
+
+      <!-- tags -->
+      <HBox>
+        <padding>
+          <Insets top="2" bottom="2" />
+        </padding>
+        <ImageView fx:id="tagIcon" fitHeight="20.0" fitWidth="20.0"
+                   preserveRatio="true">
+          <Image url="@../images/tag.png" />
+        </ImageView>
+        <HBox>
+          <padding>
+            <Insets left="5" />
+          </padding>
+          <FlowPane fx:id="tags" managed="false" />
+        </HBox>
+      </HBox>
     </VBox>
   </GridPane>
 </HBox>
